# nikss-p4c

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.ptf  README.md
backends/ebpf/: CMakeLists.txt  build_libbpf  codeGen.cpp  codeGen.h  ebpfBackend.cpp  ebpfControl.cpp  ebpfControl.h  ebpfDeparser.cpp  ebpfDeparser.h  ebpfOptions.cpp  ebpfOptions.h  ebpfParser.cpp  ebpfParser.h  ebpfProgram.cpp  ebpfProgram.h  ebpfTable.cpp  ebpfTable.h  ebpfType.cpp  ebpfType.h  midend.cpp  p4c-ebpf.cpp  run-ptf-tests.sh  target.cpp  target.h
backends/ebpf/docs/: README.md  common_issues.md  debugging.md  design.md  limitations.md  perf-optimization.md  troubleshooting.md  user-guide.md
backends/ebpf/docs/figures/: p4c-ebpf-psa.drawio
backends/ebpf/evaluation/: README.md  eval_instructions.sh  out.bc  out.c  setup_test.sh
backends/ebpf/evaluation/40b-crc-lkp-tbl/: out.c
backends/ebpf/evaluation/40b-crc-no-opt/: out.c
backends/ebpf/evaluation/40b-crc-slice-by-4/: out.c
backends/ebpf/evaluation/40b-crc-slice-by-8/: out.c
backends/ebpf/evaluation/crc-lookup-tbl-2/: out.c
backends/ebpf/evaluation/crc-no-opt/: out.c
backends/ebpf/evaluation/crc-slice-by-4-tc/: out.c
backends/ebpf/evaluation/crc-slice-by-4-tc2/: out.c
backends/ebpf/evaluation/crc-slice-by-8-tc2/: out.c
backends/ebpf/evaluation/crc-test-p4/: out.c
backends/ebpf/evaluation/ip-hdr-lkp-tbl/: out.c
backends/ebpf/evaluation/ip-hdr-no-opt/: out.c
backends/ebpf/evaluation/ip-hdr-slice-by-4/: out.c
backends/ebpf/evaluation/ip-hdr-slice-by-8/: out.c
backends/ebpf/evaluation/ip_hdr_crc-lkp_tbl/: out.c
backends/ebpf/evaluation/ip_hdr_crc-no-opt/: out.c
backends/ebpf/evaluation/test_tc/: clean.sh  out-tc.c  test.sh
backends/ebpf/evaluation/test_xdp/: Makefile  clean.sh  out-xdp.c  out-xdp.ll  test.sh  xdp_loader  xdp_loader.c
backends/ebpf/evaluation/xdp-40b-crc-lkp-tbl/: out.c
backends/ebpf/evaluation/xdp-40b-crc-slice-by-4/: out.c
backends/ebpf/evaluation/xdp-40b-crc-slice-by-8/: out.c
backends/ebpf/evaluation/xdp-40b-crc-test-no-opt/: out.c
backends/ebpf/evaluation/xdp-crc-lookup-tbl-2/: out.c
backends/ebpf/evaluation/xdp-crc-slice-by-4/: out.c
backends/ebpf/evaluation/xdp-crc-slice-by-8/: out.c
backends/ebpf/evaluation/xdp-crc-test-no-opt/: out.c
backends/ebpf/evaluation/xdp-crc-test-p4/: out.c
backends/ebpf/evaluation/xdp-ip-hdr-lkp-tbl/: out.c
backends/ebpf/evaluation/xdp-ip-hdr-no-opt/: out.c
backends/ebpf/evaluation/xdp-ip-hdr-slice-by-4/: out.c
backends/ebpf/evaluation/xdp-ip-hdr-slice-by-8/: out.c
backends/ebpf/examples/: psa-fwd.p4
backends/ebpf/psa/: README.md  backend.cpp  backend.h  ebpfBackend.cpp  ebpfPipeline.cpp  ebpfPipeline.h  ebpfPsaArch.cpp  ebpfPsaArch.h  ebpfPsaBackend.cpp  ebpfPsaBackend.h  ebpfPsaControl.cpp  ebpfPsaControl.h  ebpfPsaControlTranslators.h  ebpfPsaDeparser.cpp  ebpfPsaDeparser.h  ebpfPsaGen.cpp  ebpfPsaObjects.cpp  ebpfPsaObjects.h  ebpfPsaParser.cpp  ebpfPsaParser.h  ebpfPsaProgram.cpp  ebpfPsaProgram.h  ebpfPsaTable.cpp  ebpfPsaTable.h  ebpfPsaTypes.cpp  ebpfPsaTypes.h  xdpHelpProgram.cpp  xdpHelpProgram.h  xdpProgram.cpp  xdpProgram.h  xdpTarget.cpp  xdpTarget.h
backends/ebpf/psa/externs/: ebpfPsaChecksum.cpp  ebpfPsaChecksum.h  ebpfPsaCounter.cpp  ebpfPsaCounter.h  ebpfPsaHashAlgorithm.cpp  ebpfPsaHashAlgorithm.h  ebpfPsaMeter.cpp  ebpfPsaMeter.h  ebpfPsaRandom.cpp  ebpfPsaRandom.h  ebpfPsaRegister.cpp  ebpfPsaRegister.h  ebpfPsaTableImplementation.cpp  ebpfPsaTableImplementation.h
backends/ebpf/runtime/: ebpf_kernel.h  kernel.mk  psa.h  xdp_kernel.h
backends/ebpf/runtime/load-prog/: load_prog.c
backends/ebpf/runtime/prectl/: clone_session.c  clone_session.h  common.c  common.h  prectl.c
backends/ebpf/runtime/psabpf/: main.c  psabpf.h
backends/ebpf/samples/: README.md  tc_egress_metadata.c
backends/ebpf/samples/PSA_standard_meta/: README.md  psa_meta.c  setup.sh
backends/ebpf/samples/clone_e2e/: README.md  ce2e-kern.c  ce2e-user.c  run.sh
backends/ebpf/samples/const-default-action/: const-action.c
backends/ebpf/samples/cpu_to_dp/: setup.sh  tc_cpu_port.c  xdp_cpu_port.c
backends/ebpf/samples/cpumap/: README.md  cpumap_kern.c  run.sh
backends/ebpf/samples/devmap/: README.md  makefile  run.sh  xdp_redirect_map_kern.c  xdp_redirect_map_user.c
backends/ebpf/samples/digest/: digest.h  queue_map_kern.c  read_digest.c  setup.sh
backends/ebpf/samples/full-arch/: Makefile  README.md  full-kern.c  full-user.c  psa.h
backends/ebpf/samples/meta_xdp2tc/: meta_xdp2tc.c  setup.sh
backends/ebpf/samples/meters/: Makefile  README.md  meters.c  meters_2.c  meters_fb.c  meters_new.c  meters_old.c  rules.sh  rules_fb.sh  setup.sh
backends/ebpf/samples/packet-cloning/: packet-cloning.c  pkt-clone-user.c  run.sh
backends/ebpf/samples/recirculate/: README.md  common.h  makefile  poc1.c  poc2.c  poc3.c  poc4.c
backends/ebpf/samples/resubmit/: README.md  chain_call.c  chain_call2.c  makefile  resubmit_poc1.c  resubmit_poc1_inline.c  resubmit_poc2.c  resubmit_poc3.c  resubmit_poc4.c  tail_call.c
backends/ebpf/samples/tc-qos/: Makefile  README.md  setup.sh  test.c
backends/ebpf/samples/tc_remove_header/: metadata_header.h  setup.sh  tc_egress_metadata.c  tc_ingress_metadata.c
backends/ebpf/samples/ternary_match/: README.md  expand_kern.c  expand_keys.txt  expand_user.cpp  makefile  naive_kern.c
backends/ebpf/samples/ternary_tss/: common.h  tss-kern.c
backends/ebpf/samples/utils/: makefile
backends/ebpf/samples/xdp_parser/: xdp_parser_poc.py
backends/ebpf/targets/: ebpfstf.py
backends/ebpf/tests/: list-usr.c  makefile  ptf.pcap  resubmit_test.c  test.sh
backends/ebpf/tests/p4testdata/: action-const-default.p4  action-default-ternary.p4  action-profile-lpm.p4  action-profile-ternary.p4  action-profile1.p4  action-profile2.p4  action-profile3.p4  action-selector-hit.p4  action-selector-lpm.p4  action-selector-ternary.p4  action-selector1.p4  action-selector2.p4  action-selector3.p4  action-selector4.p4  bng.p4  checksum-updates.p4  clone-i2e.p4  const-entry-and-action.p4  const-entry-ternary.p4  (+33 more)
(+311 files in other folders)
